<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/register_page_background"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!--线性布局1-->
    <LinearLayout
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05">
        <ImageView
            android:id="@+id/back_view"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:src="@mipmap/back_btn"
           />
    </LinearLayout>

    <TextView
        android:id="@+id/welcom_view1"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:text="Hi"
        android:textSize="30dp"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15"/>
    <TextView
        android:id="@+id/welcom_view2"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:text="@string/welcom_text"
        android:textSize="30dp"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.23"/>

    <LinearLayout
        android:id="@+id/balance_Layout"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@id/linear_input">
        <TextView
            android:id="@+id/invite_userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="邀请人：XXXX"
            android:visibility="invisible"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/register_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45">
        <ImageView
            android:id="@+id/regist_num_img"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:layout_marginLeft="5dp"
            android:layout_gravity="center"
            android:src="@mipmap/user_img"
            />
        <EditText
            android:id="@+id/regist_accout_nmm"
            android:layout_width="210dp"
            android:layout_height="40dp"
            android:layout_marginRight="20dp"
            android:gravity="center_vertical"
            android:hint="@string/edit_account"
            android:background="@null"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.55">
        <LinearLayout
           android:layout_height="40dp"
            android:layout_width="wrap_content"
            android:background="@drawable/register_background">

            <ImageView
                android:id="@+id/regist_verify_code_view"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:src="@mipmap/verify_code_img" />
            <EditText
            android:id="@+id/regist_verify_code"
            android:layout_width="125dp"
            android:layout_height="40dp"
                android:gravity="center_vertical"
            android:hint="@string/edit_verif"
                android:background="@null"
            android:inputType="number" />
        </LinearLayout>
        <Button
            android:id="@+id/verification_code_obtain"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="6dp"
            android:background="@drawable/selector_getvercode"
            android:textColor="@color/colorWhite"
            android:stateListAnimator="@null"
            android:textSize="15sp"
            android:text="@string/obtion_verif" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/register_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65">
        <ImageView
            android:id="@+id/regist_secret_code_img"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:layout_marginLeft="5dp"
            android:layout_gravity="center"
            android:src="@mipmap/secret_code_img"
            />
        <EditText
            android:id="@+id/regist_secret_code"
            android:layout_width="210dp"
            android:layout_height="40dp"
            android:layout_marginRight="20dp"

            android:background="@null"
            android:hint="@string/edit_password"
            android:inputType="textPassword"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8">

        <Button
            android:id="@+id/btn_register"
            android:background="@drawable/selector_register"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:text="@string/login_account"
            android:stateListAnimator="@null"
            android:textColor="@color/colorWhite"
            android:textSize="18sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_anonymous"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:background="@drawable/selector_anonylogin"
        android:text="@string/login_anonymous"
        android:textSize="18sp"
        android:textColor="@color/colorWhite"
        android:stateListAnimator="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9" />


</androidx.constraintlayout.widget.ConstraintLayout>