<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!--线性布局1-->

    <LinearLayout
        android:id="@+id/username_layout"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:fitsSystemWindows="true"
        android:background="@mipmap/image_detail_background"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/back_toList"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="10dp"
            android:src="@mipmap/back_btn" />

        <com.huawei.photoplaza.agc.viewAndAdapter.CircleImageView
            android:id="@+id/roundImageView"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:src="@mipmap/ic_user" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:text="@string/pic_upload_user"
                android:textColor="@color/colorWhite"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/pic_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="3dp"
                android:gravity="center_vertical"
                android:text="@string/pic_upload_time"
                android:textColor="@color/colorWhite"
                android:textSize="10sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/btn_share"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/selector_getverif"
            android:src="@mipmap/ic_share" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/show_photo"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/comment_tile"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_layout">

        <ImageView
            android:id="@+id/picture"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center_vertical" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/comment_tile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="#E8E8E8"
        app:layout_constraintTop_toBottomOf="@+id/show_photo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.49"
        tools:ignore="NotSibling">

        <TextView
            android:id="@+id/last_comment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="2"
            android:text="@string/hot_comments"
            android:textColor="@color/colorBlack"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/comment_total"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="13dp" />
    </LinearLayout>

    <ListView
        android:id="@+id/comment_listview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:divider="@null"
        android:scrollbars="none"
        android:layout_marginTop="5dp"
        app:layout_constraintBottom_toTopOf="@id/comment_input_layout"
        app:layout_constraintTop_toBottomOf="@id/comment_tile" />
    <!--android:background="#E8E8E8"-->
    <LinearLayout
        android:id="@+id/comment_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.999">

        <EditText
            android:id="@+id/comment_input"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="5dp"
            android:layout_weight="4"
            android:background="@drawable/comment_background"
            android:hint="@string/add_comment_hint"
            android:textSize="12sp"
            android:textColor="@color/colorBlack"/>

        <Button
            android:id="@+id/add_comment"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_gravity="bottom"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/comment_background"
            android:text="@string/post_comments"
            android:textSize="15dp"
            android:textColor="@color/colorBlack"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>