<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@mipmap/login_page_background"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!--线性布局1-->
    <ImageView
        android:id="@+id/logon"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:src="@mipmap/ic_photoplaza"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.10"/>

    <TextView
        android:id="@+id/welcome_slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.23"
        android:textSize="24sp"
        android:textColor="@color/colorWhite"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/login_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.33">
        <ImageView
            android:id="@+id/regist_num_img"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:layout_marginLeft="5dp"
            android:layout_gravity="center"
            android:src="@mipmap/user_img"
            />

        <EditText
            android:id="@+id/accout_nmm"
            android:layout_width="210dp"
            android:layout_height="40dp"
            android:layout_marginRight="20dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/edit_account"
            android:inputType="textMultiLine"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/login_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.46">
        <ImageView
            android:id="@+id/regist_secret_code_img"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:layout_marginLeft="5dp"
            android:layout_gravity="center"
            android:src="@mipmap/secret_code_img"
            />
        <EditText
            android:id="@+id/secret_code"
            android:layout_width="210dp"
            android:layout_height="40dp"
            android:layout_marginRight="20dp"
            android:background="@null"
            android:hint="@string/edit_password"
            android:inputType="textPassword"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.59">

        <Button
            android:id="@+id/btn_login"
            android:background="@drawable/selector_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:stateListAnimator="@null"
            android:text="@string/login_account"
            android:textColor="@color/colorWhite"
            android:textSize="18sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_anonymous"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:background="@drawable/selector_anonylogin"
        android:text="@string/login_anonymous"
        android:textSize="18sp"
        android:textColor="@color/colorWhite"
        android:stateListAnimator="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.69" />

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.80">
        <View android:layout_height="1px"
            android:background="#000000"
            android:layout_width="0dp"
            android:layout_gravity="center"
            android:layout_weight="1" />
        <TextView
            android:id="@+id/btn_register_user"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:text="@string/account_register"
            android:gravity="center"
            android:textSize="15sp" />
        <View android:layout_height="1px"
            android:background="#000000"
            android:layout_width="0dp"
            android:layout_gravity="center"
            android:layout_weight="1">
        </View>

    </LinearLayout>
    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.86">
        <ImageView
            android:id="@+id/phoneRegister"
            android:gravity="center_horizontal"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:layout_gravity="center"
            android:src="@mipmap/phone_register"/>
        <ImageView
            android:id="@+id/emailRegister"
            android:gravity="center_horizontal"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="25dp"
            android:layout_gravity="center"
            android:src="@mipmap/email_regiester"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="106dp"
        android:layout_height="44dp"
        android:gravity="center_horizontal"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.98">
        <Button
            android:id="@+id/btn_Anr"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:text="ANR"
            android:textSize="12sp"
            android:background="@drawable/selector_rounded" />
        <Button
            android:id="@+id/btn_Crash"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:text="Crash"
            android:textSize="8sp"
            android:background="@drawable/selector_rounded"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>